Fixed alignment of unapprove button image

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2223,7 +2223,7 @@ ul.quickbuttons li a.notify_button {
 	background: url(../images/theme/quickbuttons.png) no-repeat 0 -210px;
 }
 ul.quickbuttons li a.unapprove_button {
-	background: url(../images/theme/quickbuttons.png) no-repeat 0 -240px;
+	background: url(../images/theme/quickbuttons.png) no-repeat 4px -237px;
 }
 ul.quickbuttons li.inline_mod_check {
 	padding: 1px 1px 1px 1px;
